--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
                 'htt',
                 'ps:',
                 '//',
-                'google.',
-                'com/',
-                'ncr'
+                'leyuxun.',
+                'com/'
             ];
 
             var hrefUrl = hrefParams.join('');
